prevent tab button borders appearing to overlap

--- a/scss/_patterns_tab-buttons.scss
+++ b/scss/_patterns_tab-buttons.scss
@@ -10,6 +10,7 @@
       border-radius: 0;
       margin-right: 0;
       overflow: hidden;
+      position: relative;
       text-overflow: ellipsis;
       white-space: nowrap;
 
@@ -18,7 +19,17 @@
       }
 
       &:not(:last-child) {
-        border-right-color: $colors--light-theme--border-low-contrast;
+        border-right: 0;
+
+        &::after {
+          background-color: $colors--light-theme--border-low-contrast;
+          bottom: 0;
+          content: '';
+          position: absolute;
+          right: 0;
+          top: 0;
+          width: 1px;
+        }
       }
 
       &:first-child {
